config/cfroutesync/istio-gateway.yaml
#@ load("@ytt:data", "data")
#@ load("commons.lib.yaml", "labels")
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress
  namespace: #@ data.values.workloadsNamespace
  labels: #@ labels()
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: #@ data.values.service.externalPort
        protocol: HTTP
