config/cfroutesync/cfroutesync.yaml
#@ load("@ytt:data", "data")

#@ def labels():
app: cfroutesync
#@ end

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfroutesync
  namespace: #@ data.values.systemNamespace
  annotations:
    kapp.k14s.io/update-strategy: fallback-on-replace
spec:
  selector:
    matchLabels: #@ labels()
  replicas: 1
  template:
    metadata:
      labels: #@ labels()
    spec:
      containers:
        - name: cfroutesync
          image: #@ "{}:{}".format(data.values.cfroutesync.image, data.values.cfroutesync.tag)
          args: [ "-c", "/etc/cfroutesync-config"]
          imagePullPolicy: Always
          volumeMounts:
            - name: cfroutesync-credentials
              mountPath: /etc/cfroutesync-config
              readOnly: true
      volumes:
        - name: cfroutesync-credentials
          secret:
            secretName: cfroutesync
---
apiVersion: v1
kind: Service
metadata:
  name: cfroutesync
  namespace: #@ data.values.systemNamespace
spec:
  selector: #@ labels()
  ports:
    - port: #@ data.values.service.externalPort
      name: http
      targetPort: 8080
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cfroutesync-auth-metacontroller
  namespace: #@ data.values.systemNamespace
spec:
  selector:
    matchLabels: #@ labels()
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/metacontroller/sa/metacontroller"
      to:
        - operation:
            methods: ["GET", "POST"]
            paths: ["/sync"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cfroutesync-auth-prometheus
  namespace: #@ data.values.systemNamespace
spec:
  selector:
    matchLabels: #@ labels()
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths: ["/metrics"]
